[tool.poetry]
name = "api-demo"
version = "0.1.0"
description = ""
authors = ["Nicolás Vergara  <37335567+Switchfools@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
